--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-image-file-resizer": "^0.4.7",
     "react-redux": "^7.2.4",
     "react-toastify": "^7.0.4",
     "yup": "^0.32.9"
