--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-dom": "17.0.2",
     "react-image-file-resizer": "^0.4.7",
     "react-redux": "^7.2.4",
+    "react-responsive-carousel": "^3.2.19",
     "react-toastify": "^7.0.4",
+    "typewriter-effect": "^2.18.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
