--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@david.kucsai/react-pdf-table": "^0.3.0",
+    "@react-pdf/renderer": "^2.0.16",
     "@reduxjs/toolkit": "^1.6.0",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.16.0",
     "antd": "^4.16.6",
     "axios": "^0.21.1",
     "firebase": "^8.7.1",
     "formik": "^2.2.9",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-datepicker": "^4.1.1",
     "react-dom": "17.0.2",
     "react-image-file-resizer": "^0.4.7",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
     "react-responsive-carousel": "^3.2.19",
     "react-star-ratings": "^2.3.0",
@@ -34,6 +40,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "@types/react-datepicker": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
