--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-responsive-carousel": "^3.2.19",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^7.0.4",
+    "sass": "^1.35.2",
     "typewriter-effect": "^2.18.0",
     "yup": "^0.32.9"
   },
